--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
   "author": "Vinícius Souza Santos",
   "license": "MIT",
   "private": false,
+  "scripts": {
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+  },
   "dependencies": {
     "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@typescript-eslint/parser": "^5.59.7",
+    "eslint": "^8.41.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.0.4"
   }
