--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "start": "ts-node-dev ./src/index.ts"
   },
   "dependencies": {
     "express": "^4.18.2"
