--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "ts-node-dev ./src/index.ts"
   },
   "dependencies": {
+    "dotenv": "^16.1.3",
     "express": "^4.18.2"
   },
   "devDependencies": {
