--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "dotenv": "^16.1.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
